--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
  This is the wbsite for my public repository.<br>
   <a href="https://github.com/Erickaz/Erickaz.github.io">LINK HERE</a> <br>
 
- <img scr=" " alt=" "></img>
+SURPRISE
 </p>
