--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<head>
- <style>
-  p{ background: marron; }
- </style>
-</head>
-<h1>
- Eric's DATA 3452W Repository Webpage
-</h1>
-<p>
- <strong>Prefered Name:</strong> Eric <br>
-
- This is the wbsite for my public repository.<br>
-  <a href="https://github.com/Erickaz/Erickaz.github.io">LINK HERE</a> <br>
-
-SURPRISE
-</p>
+<html lang="en">
+ <head>
+  <style>
+   p{ background: marron; }
+  </style>
+ </head>
+ <body>
+  <h1>
+   Eric's DATA 3452W Repository Webpage
+  </h1>
+  <p>
+   <strong>Prefered Name:</strong> Eric <br>
+ 
+   This is the wbsite for my public repository.<br>
+    <a href="https://github.com/Erickaz/Erickaz.github.io">LINK HERE</a> <br>
+ 
+  SURPRISE
+  </p>
+ </body>
