--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
  <head>
   <style>
-   p{ background: marron; }
+   body {text-align: center; }
+   p { background: marron; }
   </style>
  </head>
  <body>
