--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </h1>
   <p>
    <strong>Prefered Name:</strong> Eric <br>
+   <strong>Email:</strong> eekaszycki@willamette.edu <br>
  
    This is the wbsite for my public repository.<br>
     <a href="https://github.com/Erickaz/Erickaz.github.io">LINK HERE</a> <br>
