--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
+  <title> Eric's DATA 3452W Repository Webpage </title>
   <style>
    body {text-align: center; }
    p { background: marron; }
