--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <title> Eric's DATA 352W Repository Webpage </title>
   <style>
    body {text-align: center; }
-   p { background: marron; }
+   p { background: marroon; }
   </style>
  </head>
  <body>
   <h1>
-   Eric's DATA 3452W Repository Webpage
+   Eric's DATA 352W Repository Webpage
   </h1>
   <p>
    <strong>Prefered Name:</strong> Eric <br>
@@ -18,7 +18,7 @@
    This is the wbsite for my public repository.<br>
     <a href="https://github.com/Erickaz/Erickaz.github.io">LINK HERE</a> <br>
  
-   STILL SURPRISE
+   image tag here
   </p>
  </body>
 </html>
