--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title> Eric's DATA 352W Repository Webpage </title>
   <style>
    body {text-align: center; }
-   p { background: marroon; }
+   p { background-color: marroon; }
   </style>
  </head>
  <body>
