--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
  <head>
   <title> Eric's DATA 352W Repository Webpage </title>
   <style>
-   body {text-align: center; }
-   p { background-color: marroon; }
+   h1   {color: gold; }
+   body {text-align: center; background-color: marroon; }
   </style>
  </head>
  <body>
