--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title> Eric's DATA 352W Repository Webpage </title>
   <style>
    h1   {color: gold; }
-   body {text-align: center; background-color: marroon; }
+   body {text-align: center; background: maroon; }
   </style>
  </head>
  <body>
@@ -18,7 +18,7 @@
    This is the wbsite for my public repository.<br>
     <a href="https://github.com/Erickaz/Erickaz.github.io">LINK HERE</a> <br>
  
-   image tag here
+   put image tag here
   </p>
  </body>
 </html>
