--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <style>
    h1   {color: gold; }
    body {text-align: center; background: maroon; }
+   p    {font-size:120%; }
   </style>
  </head>
  <body>
@@ -18,7 +19,8 @@
    This is the wbsite for my public repository.<br>
     <a href="https://github.com/Erickaz/Erickaz.github.io">LINK HERE</a> <br>
  
-   put image tag here
+   <img src="https://static.wikia.nocookie.net/nintendo/images/a/a5/Hammer_Throw_M%26s_Wii.png/revision/latest?cb=20191011192644&path-prefix=en"
+    alt="Image of Bowser from Mario Summer Olympic Games throwing Hammer">
   </p>
  </body>
 </html>
