--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
    This is the wbsite for my public repository.<br>
     <a href="https://github.com/Erickaz/Erickaz.github.io">LINK HERE</a> <br>
  
-   <img src="https://static.wikia.nocookie.net/nintendo/images/a/a5/Hammer_Throw_M%26s_Wii.png/revision/latest?cb=20191011192644&path-prefix=en"
-    alt="Image of Bowser from Mario Summer Olympic Games throwing Hammer">
+   <img src="https://static.wikia.nocookie.net/nintendo/images/a/a5/Hammer_Throw_M%26s_Wii.png/revision/latest?cb=20191011192644&path-prefix=en" 
+    alt="Image of Bowser from Mario Summer Olympic Games throwing Hammer" 
+    width="500" height="700">
   </p>
  </body>
 </html>
