--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
    <strong>Email:</strong> eekaszycki@willamette.edu <br>
  
    This is the wbsite for my public repository.<br>
-    <a href="https://github.com/Erickaz/Erickaz.github.io">LINK HERE</a> <br>
- 
-   <img src="https://static.wikia.nocookie.net/nintendo/images/a/a5/Hammer_Throw_M%26s_Wii.png/revision/latest?cb=20191011192644&path-prefix=en" 
-    alt="Image of Bowser from Mario Summer Olympic Games throwing Hammer" 
-    width="500" height="700">
+   <a href="https://github.com/Erickaz/Erickaz.github.io">Repository Is Here</a> <br>
+   
+   <a href ""https://static.wikia.nocookie.net/nintendo/images/a/a5/Hammer_Throw_M%26s_Wii.png">
+    <img src="https://static.wikia.nocookie.net/nintendo/images/a/a5/Hammer_Throw_M%26s_Wii.png" 
+     alt="Image of Bowser from Mario Summer Olympic Games throwing Hammer" 
+     width="500" height="700">
+   </a>
   </p>
  </body>
 </html>
