--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
    h1   {color: gold; }
    body {text-align: center; background: maroon; }
-   p    {font-size:120%; }
+   p    {font-size:120%; line-height:1.5; }
   </style>
  </head>
  <body>
@@ -19,10 +19,11 @@
    This is the wbsite for my public repository.<br>
    <a href="https://github.com/Erickaz/Erickaz.github.io">Repository Is Here</a> <br>
    
+   Here's a random image:
    <a href ""https://static.wikia.nocookie.net/nintendo/images/a/a5/Hammer_Throw_M%26s_Wii.png">
     <img src="https://static.wikia.nocookie.net/nintendo/images/a/a5/Hammer_Throw_M%26s_Wii.png" 
      alt="Image of Bowser from Mario Summer Olympic Games throwing Hammer" 
-     width="500" height="700">
+     width="700" height="300">
    </a>
   </p>
  </body>
