--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
    <a href="https://github.com/Erickaz/Erickaz.github.io">Repository Is Here</a> <br>
    
    Here's a random image:
-   <a href ""https://static.wikia.nocookie.net/nintendo/images/a/a5/Hammer_Throw_M%26s_Wii.png">
-    <img src="https://static.wikia.nocookie.net/nintendo/images/a/a5/Hammer_Throw_M%26s_Wii.png" 
+   <a href "https://static.wikia.nocookie.net/nintendo/images/a/a5/Hammer_Throw_M%26s_Wii.png">
+    <img src="Wii_Bowser_Hammer_Throw.png" 
      alt="Image of Bowser from Mario Summer Olympic Games throwing Hammer" 
      width="700" height="300">
    </a>
