--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
    Here's a random image:
    <a href "https://www.britannica.com/sports/long-jump">
     <img src="Wii_Bowser_Hammer_Throw.png" 
-     alt="Image of Bowser from Mario Summer Olympic Games throwing Hammer" 
-     >
+     alt="Image of Bowser from Mario Summer Olympic Games throwing Hammer">
    </a>
   </p>
  </body>
