--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
    Here's a random image:
    <a href "https://www.britannica.com/sports/long-jump">
     <img src="Wii_Bowser_Hammer_Throw.png" 
-     alt="Image of Bowser from Mario Summer Olympic Games throwing Hammer">
+     alt="Image of Bowser from Mario Summer Olympic Games throwing Hammer"
+     width="700" height="300">
    </a>
   </p>
  </body>
