--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <a href="https://github.com/Erickaz/Erickaz.github.io">Repository Is Here</a> <br>
    
    Here's a random image:
-   <a href "https://www.britannica.com/sports/long-jump">
+   <a href="https://www.britannica.com/sports/long-jump">
     <img src="Wii_Bowser_Hammer_Throw.png" 
      alt="Image of Bowser from Mario Summer Olympic Games throwing Hammer. Click image for link to information about Hammer Throw."
      style="width=700; height=300;">
