--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
    Here's a random image:
    <a href="https://www.britannica.com/sports/long-jump">
     <img src="Wii_Bowser_Hammer_Throw.png" 
-     alt="Image of Bowser from Mario Summer Olympic Games throwing Hammer. Click image for link to information about Hammer Throw."
-     style="width=700; height=300;">
+     alt="Image of Bowser from Mario Summer Olympic Games throwing Hammer. Click image for link to information about Hammer Throw." 
+     style="width:700px;height:300px;">
    </a>
   </p>
  </body>
