--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
   </h1>
   <p>
    <strong>Prefered Name:</strong> Eric <br>
-   <strong>Email:</strong> eekaszycki@willamette.edu <br>
+   <strong>Email:</strong> eekaszycki@willamette.edu
+   <br>
  
    This is the wbsite for my public repository.<br>
-   <a href="https://github.com/Erickaz/Erickaz.github.io">Repository Is Here</a> <br>
+   <a href="https://github.com/Erickaz/Erickaz.github.io">Repository Is Here</a>
+   <br>
    
    Here's a random image:
+   <br>
+   
    <a href="https://www.britannica.com/sports/long-jump">
     <img src="Wii_Bowser_Hammer_Throw.png" 
      alt="Image of Bowser from Mario Summer Olympic Games throwing Hammer. Click image for link to information about Hammer Throw." 
