--- a/omelas.html
+++ b/omelas.html
@@ -1,1 +1,20 @@
-Omela will go here
+<!DOCTYPE html>
+<html lang="en">
+ <head>
+  <style>
+   h1 {background: black; color: white; }
+   body {text-align: center; }
+  </style>
+ </head>
+ <body>
+  <h1>
+    “The Ones Who Walk Away From Omelas” - Response, Eric Kaszycki
+  </h1>
+  <p>
+   <ul>
+     <strong> <li>a</li> </strong>
+    <li> </li>
+   </ul> 
+  </p>
+ </body>
+</html>
