--- a/omelas.html
+++ b/omelas.html
@@ -3,7 +3,6 @@
  <head>
   <style>
    h1 {background: black; color: white; }
-   body {text-align: center; }
   </style>
  </head>
  <body>
@@ -12,7 +11,16 @@
   </h1>
   <p>
    <ul>
-     <strong> <li>a</li> </strong>
+    <strong> <li>Within the work "The Ones Who Walk Away From Omelas", there's a strong issues put forth of what discrimination is required for a society, the 
+     people of Omelas, to insure happiness.</li> </strong>
+    <li>The child's suffering cannot be changed otherwise the current happiness will disappear. Do some people have to remain in poverty, saddness, and dispare?</li>
+    <li>The author assembles the idea that even if the child were free it had already been afraid to long to feel happiness; so no one will ever care to help.</li>
+    <li>People from Omelas are not unaware or unwilling, they are directly shown the evil that allows the society</li>
+    <li>The people who leave Omelas walk to nowhere, to darkness, a place unimaginable. Is this where there really is no discrimination? Something no society has seen?</li>
+    <li></li>
+    <li> </li>
+    <li> </li>
+    <li> </li>
     <li> </li>
    </ul> 
   </p>
