--- a/omelas.html
+++ b/omelas.html
@@ -16,11 +16,14 @@
     <li>The child's suffering cannot be changed otherwise the current happiness will disappear. Do some people have to remain in poverty, saddness, and dispare?</li>
     <li>The author assembles the idea that even if the child were free it had already been afraid to long to feel happiness; so no one will ever care to help.</li>
     <li>People from Omelas are not unaware or unwilling, they are directly shown the evil that allows the society</li>
-    <li>The people who leave Omelas walk to nowhere, to darkness, a place unimaginable. Is this where there really is no discrimination? Something no society has seen?</li>
-    <li></li>
-    <li> </li>
-    <li> </li>
-    <li> </li>
+    <li>The people who leave Omelas walk to nowhere, to darkness, a place unimaginable. Is this where there really is no discrimination? 
+     Something no society has seen?</li>
+    <li>Omelas is having a festival and the people's displays of relaxed and happiness hide the dark side of Omelas that they don't fear sharing.</li>
+    <li>The perfection of Omelas is a lie just like many societies that claim there is zero percent change of any discrimination, due to people 
+     worried of losing what they have</li>
+    <li>The author goes with the idea saying how Omelas is a fairy tail, therefore there is little technology. This also allows the people to be happy.</li>
+    <li>The author allows the reading to assume the people of Omelas is perfect with whatever they like; including no drug use, alcohol, 
+     and all care for the children.</li>
     <li> </li>
    </ul> 
   </p>
