--- a/omelas.html
+++ b/omelas.html
@@ -24,7 +24,7 @@
     <li>The author goes with the idea saying how Omelas is a fairy tail, therefore there is little technology. This also allows the people to be happy.</li>
     <li>The author allows the reading to assume the people of Omelas is perfect with whatever they like; including no drug use, alcohol, 
      and all care for the children.</li>
-    <li> </li>
+    <li>What do we need to ask the city of Omelas?</li>
    </ul> 
   </p>
  </body>
