--- a/omelas.html
+++ b/omelas.html
@@ -25,6 +25,8 @@
     <li>The author allows the reading to assume the people of Omelas is perfect with whatever they like; including no drug use, alcohol, 
      and all care for the children.</li>
     <li>What do we need to ask the city of Omelas?</li>
+    <li>The people that walk away leave to darkness somewhere unimaginable. Or somewhere that no one in the city cares about? Their leaving doesn't matter, they 
+     have zero affect on the sittuation within Omelas.</li>
    </ul> 
   </p>
  </body>
