--- a/aiaccess.html
+++ b/aiaccess.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="en">
+ <head>
+  <style>
+   h1 {background: black; color: white; }
+  </style>
+ </head>
+ <body>
+  <h1>
+    - Response, Eric Kaszycki
+  </h1>
+  <p>
+   <ul>
+    <strong> <li> </li> </strong>
+    <li> </li>
+   </ul> 
+  </p>
+ </body>
+</html>
