--- a/aiaccess.html
+++ b/aiaccess.html
@@ -2,12 +2,19 @@
 <html lang="en">
  <head>
   <style>
-   h1 {background: black; color: white; }
+   h1 {background: black; color: white; text-align: center; }
+   .dark-mode {background-color: black;	color: #00ffff; }
   </style>
  </head>
  <body>
+  <script>
+   function toggler() {
+	   document.body.classList.toggle("dark-mode");	   
+   }
+  </script>
+  <button onclick="toggler()">Toggle dark mode</button>
   <h1>
-    - Response, Eric Kaszycki
+   "How AI Is Improving Accessibility"- Response, Eric Kaszycki
   </h1>
   <p>
    <ul>
