--- a/sigcse.html
+++ b/sigcse.html
@@ -6,22 +6,22 @@
   </style>
  </head>
  <body onload="draw();">
-  <canvas id="randCanv" width="250" height="150"></canvas>
+  <canvas id="randCanv" width="250" height="150"></canvas>   // can add style="outline-style:dotted"
   <script>
    function draw()
    {
-	  var canvas = document.getElementById("randCanv");
+    var canvas = document.getElementById("randCanv");
     var ctx = canvas.getContext("2d");
     ctx.fillStyle = "green";
-    ctx.fillRect(25, 25, 150, 79); // x, y, width, height
+    ctx.fillRect(25, 25, 150, 79);   // x, y, width, height
    }
   </script>
   <h1>
-   Eric Kaszycki
+   SIGCSE response
   </h1>
   <p>
    <ul>
-    <strong> <li> </li> </strong>
+    <strong> <li>SIGCSE is a functioning discriminator program that expresses elitism.</li> </strong>
     <li> </li>
    </ul> 
   </p>
