--- a/sigcse.html
+++ b/sigcse.html
@@ -13,10 +13,10 @@
     var canvas = document.getElementById("randCanv");
     var ctx = canvas.getContext("2d");
     ctx.fillStyle = "green";
-    ctx.fillRect(25, 25, 80, 96);   // x, y, width, height
-    // next 2 for axies
+    ctx.fillRect(25, 25, 80, 96);   <!--- x, y, width, height --->
+    <!--- next 2 for axies --->
     ctx.fillrect(0,100,150,2)
-    ctx.fillrect(100,0,2,150
+    ctx.fillrect(100,0,2,150)
    }
   </script>
   <h1>
