--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
   </style>
  </head>
  <body>
- <script src="test.js"></script>
+ <script src="test.js" type="text/javascript"></script>
   <button onclick="toggler()">Toggle dark mode</button>
   <h1>
    "How AI Is Improving Accessibility"- Response, Eric Kaszycki
