--- a/test.html
+++ b/test.html
@@ -10,13 +10,11 @@
  <script src="test.js" type="text/javascript"></script>
   <button onclick="toggler()">Toggle dark mode</button>
   <h1>
-   "How AI Is Improving Accessibility"- Response, Eric Kaszycki
-   <br>
-   Wiggers, Kyle. “How Microsoft Is Using AI to Improve Accessibility.” VentureBeat
+   this is a test using website: https://erickaz.github.io/test.html
   </h1>
   <p>
    <ul>
-    <strong> <li>With good intentions in mind for those with disabilities that wish to have better assistance, AI will be very useful on a large scale.</li> </strong>
+    <strong> <li> </li> </strong>
     <li> </li>
    </ul> 
   </p>
