--- a/test.html
+++ b/test.html
@@ -5,6 +5,7 @@
    h1 {background: black; color: white; text-align: center; }
    .dark-mode {background-color: black;	color: #00ffff; }
   </style>
+  <link rel="testingfile" href="test.js" />
  </head>
  <body>
  <script src="test.js" type="text/javascript"></script>
