--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
   <link rel="testingfile" href="test.js" />
  </head>
  <body>
-
+  <script src="test.js" type="text/javascript"></script>
   <button onclick="toggler()">Toggle dark mode</button>
   <h1>
    this is a test using website: https://erickaz.github.io/test.html
