--- a/hud.html
+++ b/hud.html
@@ -11,8 +11,8 @@
   </h1>
   <p>
    <ul>
-    <strong> <li> </li> </strong>
-    <li> </li>
+    <strong> <li>Discrimination within one of the most used online websites/apps could only influence user interaction.</li> </strong>
+    <li>If this company is willing to discriminate who''s to say they don't then "enforce" it within Facebook.</li>
    </ul> 
   </p>
  </body>
